6.5/api/Classes/classshapeworks_1_1DeepSSMParameters.md
---
title: shapeworks::DeepSSMParameters

---

# shapeworks::DeepSSMParameters





## Public Functions

|                | Name           |
| -------------- | -------------- |
| | **[DeepSSMParameters](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-deepssmparameters)**(ProjectHandle project) |
| void | **[save_to_project](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-save-to-project)**() |
| int | **[get_aug_num_samples](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-num-samples)**() |
| void | **[set_aug_num_samples](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-num-samples)**(int num_samples) |
| int | **[get_aug_num_dims](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-num-dims)**() |
| void | **[set_aug_num_dims](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-num-dims)**(int num_dims) |
| int | **[get_training_num_dims](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-num-dims)**() |
| void | **[set_training_num_dims](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-num-dims)**(int num_dims) |
| double | **[get_aug_percent_variability](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-percent-variability)**() |
| void | **[set_aug_percent_variability](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-percent-variability)**(double percent_variability) |
| std::string | **[get_aug_sampler_type](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-sampler-type)**() |
| void | **[set_aug_sampler_type](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-sampler-type)**(std::string sampler_type) |
| int | **[get_training_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-epochs)**() |
| void | **[set_training_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-epochs)**(int epochs) |
| double | **[get_training_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-learning-rate)**() |
| void | **[set_training_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-learning-rate)**(double rate) |
| bool | **[get_training_decay_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-decay-learning-rate)**() |
| void | **[set_training_decay_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-decay-learning-rate)**(bool decay) |
| bool | **[get_training_fine_tuning](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-fine-tuning)**() |
| void | **[set_training_fine_tuning](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-fine-tuning)**(bool fine_tuning) |
| int | **[get_training_fine_tuning_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-fine-tuning-epochs)**() |
| void | **[set_training_fine_tuning_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-fine-tuning-epochs)**(int epochs) |
| double | **[get_training_fine_tuning_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-fine-tuning-learning-rate)**() |
| void | **[set_training_fine_tuning_learning_rate](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-fine-tuning-learning-rate)**(double rate) |
| int | **[get_training_batch_size](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-batch-size)**() |
| void | **[set_training_batch_size](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-batch-size)**(int batch_size) |
| double | **[get_training_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-split)**() |
| void | **[set_training_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-split)**(double value) |
| double | **[get_validation_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-validation-split)**() |
| void | **[set_validation_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-validation-split)**(double value) |
| double | **[get_testing_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-testing-split)**() |
| void | **[set_testing_split](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-testing-split)**(double value) |
| bool | **[get_prep_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-prep-step-complete)**() |
| void | **[set_prep_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-prep-step-complete)**(bool value) |
| int | **[get_prep_stage](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-prep-stage)**() |
| void | **[set_prep_stage](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-prep-stage)**(int stage) |
| bool | **[get_aug_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-step-complete)**() |
| void | **[set_aug_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-step-complete)**(bool value) |
| std::string | **[get_aug_message](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-aug-message)**() |
| void | **[set_aug_message](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-aug-message)**(std::string message) |
| bool | **[get_training_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-step-complete)**() |
| void | **[set_training_step_complete](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-step-complete)**(bool value) |
| std::string | **[get_training_message](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-training-message)**() |
| void | **[set_training_message](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-training-message)**(std::string message) |
| std::vector< double > | **[get_spacing](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-spacing)**() |
| void | **[set_spacing](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-spacing)**(std::vector< double > spacing) |
| std::string | **[get_loss_function](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-loss-function)**() |
| void | **[set_loss_function](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-loss-function)**(std::string loss_function) |
| bool | **[get_tl_net_enabled](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-enabled)**() |
| void | **[set_tl_net_enabled](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-enabled)**(bool enabled) |
| int | **[get_tl_net_ae_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-ae-epochs)**() |
| void | **[set_tl_net_ae_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-ae-epochs)**(int num_epochs) |
| int | **[get_tl_net_tf_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-tf-epochs)**() |
| void | **[set_tl_net_tf_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-tf-epochs)**(int num_epochs) |
| int | **[get_tl_net_joint_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-joint-epochs)**() |
| void | **[set_tl_net_joint_epochs](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-joint-epochs)**(int num_epochs) |
| double | **[get_tl_net_alpha](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-alpha)**() |
| void | **[set_tl_net_alpha](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-alpha)**(double alpha) |
| double | **[get_tl_net_a_ae](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-a-ae)**() |
| void | **[set_tl_net_a_ae](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-a-ae)**(double a_ae) |
| double | **[get_tl_net_c_ae](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-c-ae)**() |
| void | **[set_tl_net_c_ae](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-c-ae)**(double c_ae) |
| double | **[get_tl_net_a_lat](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-a-lat)**() |
| void | **[set_tl_net_a_lat](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-a-lat)**(double a_lat) |
| double | **[get_tl_net_c_lat](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-get-tl-net-c-lat)**() |
| void | **[set_tl_net_c_lat](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-set-tl-net-c-lat)**(double c_lat) |
| void | **[restore_split_defaults](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-restore-split-defaults)**() |
| void | **[restore_augmentation_defaults](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-restore-augmentation-defaults)**() |
| void | **[restore_training_defaults](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-restore-training-defaults)**() |
| void | **[restore_defaults](../Classes/classshapeworks_1_1DeepSSMParameters.md#function-restore-defaults)**() |

## Public Attributes

|                | Name           |
| -------------- | -------------- |
| const std::string | **[DEEPSSM_SAMPLER_GAUSSIAN_C](../Classes/classshapeworks_1_1DeepSSMParameters.md#variable-deepssm-sampler-gaussian-c)**  |
| const std::string | **[DEEPSSM_SAMPLER_MIXTURE_C](../Classes/classshapeworks_1_1DeepSSMParameters.md#variable-deepssm-sampler-mixture-c)**  |
| const std::string | **[DEEPSSM_SAMPLER_KDE_C](../Classes/classshapeworks_1_1DeepSSMParameters.md#variable-deepssm-sampler-kde-c)**  |

## Public Functions Documentation

### function DeepSSMParameters

```cpp
explicit DeepSSMParameters(
    ProjectHandle project
)
```


### function save_to_project

```cpp
void save_to_project()
```


### function get_aug_num_samples

```cpp
int get_aug_num_samples()
```


### function set_aug_num_samples

```cpp
void set_aug_num_samples(
    int num_samples
)
```


### function get_aug_num_dims

```cpp
int get_aug_num_dims()
```


### function set_aug_num_dims

```cpp
void set_aug_num_dims(
    int num_dims
)
```


### function get_training_num_dims

```cpp
int get_training_num_dims()
```


### function set_training_num_dims

```cpp
void set_training_num_dims(
    int num_dims
)
```


### function get_aug_percent_variability

```cpp
double get_aug_percent_variability()
```


### function set_aug_percent_variability

```cpp
void set_aug_percent_variability(
    double percent_variability
)
```


### function get_aug_sampler_type

```cpp
std::string get_aug_sampler_type()
```


### function set_aug_sampler_type

```cpp
void set_aug_sampler_type(
    std::string sampler_type
)
```


### function get_training_epochs

```cpp
int get_training_epochs()
```


### function set_training_epochs

```cpp
void set_training_epochs(
    int epochs
)
```


### function get_training_learning_rate

```cpp
double get_training_learning_rate()
```


### function set_training_learning_rate

```cpp
void set_training_learning_rate(
    double rate
)
```


### function get_training_decay_learning_rate

```cpp
bool get_training_decay_learning_rate()
```


### function set_training_decay_learning_rate

```cpp
void set_training_decay_learning_rate(
    bool decay
)
```


### function get_training_fine_tuning

```cpp
bool get_training_fine_tuning()
```


### function set_training_fine_tuning

```cpp
void set_training_fine_tuning(
    bool fine_tuning
)
```


### function get_training_fine_tuning_epochs

```cpp
int get_training_fine_tuning_epochs()
```


### function set_training_fine_tuning_epochs

```cpp
void set_training_fine_tuning_epochs(
    int epochs
)
```


### function get_training_fine_tuning_learning_rate

```cpp
double get_training_fine_tuning_learning_rate()
```


### function set_training_fine_tuning_learning_rate

```cpp
void set_training_fine_tuning_learning_rate(
    double rate
)
```


### function get_training_batch_size

```cpp
int get_training_batch_size()
```


### function set_training_batch_size

```cpp
void set_training_batch_size(
    int batch_size
)
```


### function get_training_split

```cpp
double get_training_split()
```


### function set_training_split

```cpp
void set_training_split(
    double value
)
```


### function get_validation_split

```cpp
double get_validation_split()
```


### function set_validation_split

```cpp
void set_validation_split(
    double value
)
```


### function get_testing_split

```cpp
double get_testing_split()
```


### function set_testing_split

```cpp
void set_testing_split(
    double value
)
```


### function get_prep_step_complete

```cpp
bool get_prep_step_complete()
```


### function set_prep_step_complete

```cpp
void set_prep_step_complete(
    bool value
)
```


### function get_prep_stage

```cpp
int get_prep_stage()
```


### function set_prep_stage

```cpp
void set_prep_stage(
    int stage
)
```


### function get_aug_step_complete

```cpp
bool get_aug_step_complete()
```


### function set_aug_step_complete

```cpp
void set_aug_step_complete(
    bool value
)
```


### function get_aug_message

```cpp
std::string get_aug_message()
```


### function set_aug_message

```cpp
void set_aug_message(
    std::string message
)
```


### function get_training_step_complete

```cpp
bool get_training_step_complete()
```


### function set_training_step_complete

```cpp
void set_training_step_complete(
    bool value
)
```


### function get_training_message

```cpp
std::string get_training_message()
```


### function set_training_message

```cpp
void set_training_message(
    std::string message
)
```


### function get_spacing

```cpp
std::vector< double > get_spacing()
```


### function set_spacing

```cpp
void set_spacing(
    std::vector< double > spacing
)
```


### function get_loss_function

```cpp
std::string get_loss_function()
```


### function set_loss_function

```cpp
void set_loss_function(
    std::string loss_function
)
```


### function get_tl_net_enabled

```cpp
bool get_tl_net_enabled()
```


### function set_tl_net_enabled

```cpp
void set_tl_net_enabled(
    bool enabled
)
```


### function get_tl_net_ae_epochs

```cpp
int get_tl_net_ae_epochs()
```


### function set_tl_net_ae_epochs

```cpp
void set_tl_net_ae_epochs(
    int num_epochs
)
```


### function get_tl_net_tf_epochs

```cpp
int get_tl_net_tf_epochs()
```


### function set_tl_net_tf_epochs

```cpp
void set_tl_net_tf_epochs(
    int num_epochs
)
```


### function get_tl_net_joint_epochs

```cpp
int get_tl_net_joint_epochs()
```


### function set_tl_net_joint_epochs

```cpp
void set_tl_net_joint_epochs(
    int num_epochs
)
```


### function get_tl_net_alpha

```cpp
double get_tl_net_alpha()
```


### function set_tl_net_alpha

```cpp
void set_tl_net_alpha(
    double alpha
)
```


### function get_tl_net_a_ae

```cpp
double get_tl_net_a_ae()
```


### function set_tl_net_a_ae

```cpp
void set_tl_net_a_ae(
    double a_ae
)
```


### function get_tl_net_c_ae

```cpp
double get_tl_net_c_ae()
```


### function set_tl_net_c_ae

```cpp
void set_tl_net_c_ae(
    double c_ae
)
```


### function get_tl_net_a_lat

```cpp
double get_tl_net_a_lat()
```


### function set_tl_net_a_lat

```cpp
void set_tl_net_a_lat(
    double a_lat
)
```


### function get_tl_net_c_lat

```cpp
double get_tl_net_c_lat()
```


### function set_tl_net_c_lat

```cpp
void set_tl_net_c_lat(
    double c_lat
)
```


### function restore_split_defaults

```cpp
void restore_split_defaults()
```


### function restore_augmentation_defaults

```cpp
void restore_augmentation_defaults()
```


### function restore_training_defaults

```cpp
void restore_training_defaults()
```


### function restore_defaults

```cpp
void restore_defaults()
```


## Public Attributes Documentation

### variable DEEPSSM_SAMPLER_GAUSSIAN_C

```cpp
static const std::string DEEPSSM_SAMPLER_GAUSSIAN_C;
```


### variable DEEPSSM_SAMPLER_MIXTURE_C

```cpp
static const std::string DEEPSSM_SAMPLER_MIXTURE_C;
```


### variable DEEPSSM_SAMPLER_KDE_C

```cpp
static const std::string DEEPSSM_SAMPLER_KDE_C;
```


-------------------------------

Updated on 2024-02-21 at 01:59:09 +0000